One the first commits

--- a/index.html
+++ b/index.html
@@ -5,8 +5,41 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SPACEMAN</title>
+  <script defer src="js/main.js"></script>
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-  
+  <h1>SPACEMAN</h1>
+  <h2>How many tries will it take?</h2>
+  <main>
+    <div>A</div>
+    <div>B</div>
+    <div>C</div>
+    <div>D</div>
+    <div>E</div>
+    <div>F</div>
+    <div>G</div>
+    <div>H</div>
+    <div>I</div>
+    <div>J</div>
+    <div>K</div>
+    <div>L</div>
+    <div>M</div>
+    <div>N</div>
+    <div>O</div>
+    <div>P</div>
+    <div>Q</div>
+    <div>R</div>
+    <div>S</div>
+    <div>T</div>
+    <div>U</div>
+    <div>V</div>
+    <div>W</div>
+    <div>X</div>
+    <div>Y</div>
+    <div>Z</div>
+  </main>
+    <button>Pick letter</button>
+  <button>PLAY AGAIN</button>
 </body>
 </html>
