Updated the bg page

--- a/index.html
+++ b/index.html
@@ -9,37 +9,45 @@
   <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-  <h1>SPACEMAN</h1>
-  <h2>How many tries will it take?</h2>
-  <main>
-    <div>A</div>
-    <div>B</div>
-    <div>C</div>
-    <div>D</div>
-    <div>E</div>
-    <div>F</div>
-    <div>G</div>
-    <div>H</div>
-    <div>I</div>
-    <div>J</div>
-    <div>K</div>
-    <div>L</div>
-    <div>M</div>
-    <div>N</div>
-    <div>O</div>
-    <div>P</div>
-    <div>Q</div>
-    <div>R</div>
-    <div>S</div>
-    <div>T</div>
-    <div>U</div>
-    <div>V</div>
-    <div>W</div>
-    <div>X</div>
-    <div>Y</div>
-    <div>Z</div>
-  </main>
-    <button>Pick letter</button>
-  <button>PLAY AGAIN</button>
-</body>
-</html>
+  
+    <h1>SPACEMAN</h1>
+    <h2>How many tries will it take?</h2>
+    <main>
+      <button>A</button>
+      <button>B</button>
+      <button>C</button>
+      <button>D</button>
+      <button>E</button>
+      <button>F</button>
+      <button>G</button>
+      <button>H</button>
+      <button>I</button>
+      <button>J</button>
+      <button>K</button>
+      <button>L</button>
+      <button>M</button>
+      <button>N</button>
+      <button>O</button>
+      <button>P</button>
+      <button>Q</button>
+      <button>R</button>
+      <button>S</button>
+      <button>T</button>
+      <button>U</button>
+      <button>V</button>
+      <button>W</button>
+      <button>X</button>
+      <button>Y</button>
+      <button>Z</button>
+    </main>
+    <!--<button>Pick letter</button>-->
+    <img src="" alt="">
+    <div class="word-wrapper">
+      <p>secret word</p>
+    </div>
+    <p class="number-of-lives">You have _ lives</p>
+    <aside>
+      <button>PLAY AGAIN</button>
+    </aside>
+  </body>
+  </html>
