--- a/index.html
+++ b/index.html
@@ -40,14 +40,15 @@
       <button>Y</button>
       <button>Z</button>
     </main>
-    <!--<button>Pick letter</button>-->
-    <img src="" alt="">
+    
     <div class="word-wrapper">
-      <p>secret word</p>
+      <p id ="message"></p>
+      <h1 id="p-guess-word"></h1>
     </div>
     <p class="number-of-lives">You have _ lives</p>
+    <img src="img/spaceman-0.jpg" alt="">
     <aside>
-      <button>PLAY AGAIN</button>
+      <button class="PA-button">PLAY AGAIN</button>
     </aside>
   </body>
   </html>
