--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
     
     <div class="word-wrapper">
       <p id ="message"></p>
-      <h1 id="p-guess-word"></h1>
     </div>
+    <div class="img-wrapper">
+      <img src="img/spaceman-0.jpg" alt="">
+    </div>
+    <h1 id="p-guess-word"></h1>
     <p class="number-of-lives">You have _ lives</p>
-    <img src="img/spaceman-0.jpg" alt="">
     <aside>
       <button class="PA-button">PLAY AGAIN</button>
     </aside>
