--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   
-    <h1>SPACEMAN</h1>
+    <h1>SPACEman</h1>
     <h2>How many tries will it take?</h2>
     <main>
       <button>A</button>
