Added the play agaain btn and style the wrong or right letters in the background

--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
       <img src="img/spaceman-0.jpg" alt="">
     </div>
     <h1 id="p-guess-word"></h1>
-    <p class="number-of-lives">You have _ lives</p>
     <aside>
-      <button class="PA-button">PLAY AGAIN</button>
+      <button id="PA-button">PLAY AGAIN</button>
     </aside>
   </body>
   </html>
